--- a/survey/Survey Development.Rmd
+++ b/survey/Survey Development.Rmd
@@ -329,3 +329,17 @@ ggplot(df_peng_iqr, aes(bill_ratio, species_num - .2)) +
 Survey items consisted of first, middle, and final contributions of #TidyTuesday participants who agreed for us to use their graphics. Any graphics that were not relevant to #TidyTuesday were removed. In addition, when more than one graphic existed for any of the three time points, graphics were chosen based on those that required the least context to understand (e.g. did not use advanced statistical techniques such as odd ratios or sentiment analysis, did not contain undefined acronyms, etc.)
 
 ## Survey Questions
+
+# Survey Validation
+
+## Content Validity
+
+## Convergent/Divergent Validity
+
+## Reliability
+
+### Item Analysis
+
+### Factor Analysis
+
+### D Study
