--- a/survey/Survey Development.Rmd
+++ b/survey/Survey Development.Rmd
@@ -331,6 +331,18 @@ Survey items consisted of first, middle, and final contributions of #TidyTuesday
 
 ## Survey Questions
 
+There are three main survey questions per image. Each question is meant measure a different data visualizationn construct. Initial considerations for constructs came from Berland et al.'s (2015) epistemic considerations ... JOSH ...
+
+Further refinement of the constructs was also based on prior research into design and utilitiy preferences of data visualization consumers. For example, Quispel and Maes (2014) had graphic design students rate visualizations on attractiveness, information retrieval, clarity, and an overall rating in addition to a selection task where participants selected three visualizations they most appreciated and then explained their selections. Quispel et al. (2016) surveyed design experts and "laymen" (non-design experts) on attractiveness, familiarity, and perceived ease of use. Locoro et al. (2017) include a higher number of measures in their survey of the perceptions and interaction with infographics. They measured sinteticity (informational quality), clarity, informativity, intuitivity, elegance, attractiveness, usability, and ease of use.
+
+In developing the survey questions, we considered the overlapping constructs of these examples from prior visualization work and how they were related to the epistemic framework above. In addition, we also considered the need to create succinct survey questions in order to reduce survey fatigue and minimize unplanned missing data. 
+
+Thus, we developed he following three survey constructs, each of which is rated on a 5-point scale from very poor (1) to very good (5):
+
+  - Informativity - This element focuses on how well the graphic describes or explains something that is happening or has happened.
+  - Clarity - This element focuses on how easy it is to read, understand, and interpret the visualization.
+ - Attractiveness - This element focuses on how appealing and engaging the graphic is in terms of its overall use of shapes, color, theme, and layout.
+
 # Survey Validation
 
 ## Content Validity
