update survey qs

--- a/survey/Survey Development.Rmd
+++ b/survey/Survey Development.Rmd
@@ -331,11 +331,11 @@ Survey items consisted of first, middle, and final contributions of #TidyTuesday
 
 ## Survey Questions
 
-There are three main survey questions per image. Each question is meant to measure a different data visualizationn construct. Initial considerations for constructs came from Berland et al.'s (2015) epistemologies in practice framework, which was designed to serve as a measure of students' thinking about the nature of knowledge-related ideas that guided their science inquiry.
+There are three main survey questions per image. Each question is meant to measure a different data visualizationn construct. Initial considerations for constructs came from Berland et al.'s (2015) epistemologies in practice framework, which was designed to serve as a measure of students' thinking about the nature of knowledge-related ideas that guided their science inquiry. This framework included dimensions for attention to audience, the inclusion of evidence, and the extent to which the model communicated how and why something in the world worked.
 
-Further refinement of the constructs was also based on prior research. For example, Quispel and Maes (2014) had graphic design students rate visualizations on attractiveness, information retrieval, clarity, and an overall rating in addition to a selection task where participants selected three visualizations they most appreciated and then explained their selections. Quispel et al. (2016) surveyed design experts and "laymen" (non-design experts) on attractiveness, familiarity, and perceived ease of use. Locoro et al. (2017) include a higher number of measures in their survey of the perceptions and interaction with infographics. They measured sinteticity (informational quality), clarity, informativity, intuitivity, elegance, attractiveness, usability, and ease of use.
+Further refinement of the constructs was also based on prior research. For example, Quispel and Maes (2014) had graphic design students rate visualizations on 1) attractiveness, 2) information retrieval, 3) clarity, and 4) an overall rating in addition to a selection task where participants selected three visualizations they most appreciated and then explained their selections. Quispel et al. (2016) surveyed design experts and "laymen" (non-design experts) on attractiveness, familiarity, and perceived ease of use. Locoro et al. (2017) include a higher number of measures in their survey of the perceptions and interaction with infographics. They measured sinteticity (informational quality), clarity, informativity, intuitivity, elegance, attractiveness, usability, and ease of use.
 
-In developing the survey questions, we considered the overlapping constructs of these examples from prior visualization work and how they were related to the epistemologies in practice framework above. In addition, we also considered the need to create succinct survey questions in order to reduce survey fatigue and minimize unplanned missing data. 
+In developing the survey questions, we considered the overlapping constructs of these examples from prior visualization work and how they were related to the above epistemologies in practice framework. In addition, we considered the need to create succinct survey questions in order to reduce survey fatigue and minimize unplanned missing data. 
 
 Thus, we developed he following three survey constructs, each of which is rated on a 5-point scale from very poor (1) to very good (5):
 
