--- a/survey/Survey Development.Rmd
+++ b/survey/Survey Development.Rmd
@@ -335,7 +335,7 @@ There are three main survey questions per image. Each question is meant to measu
 
 Further refinement of the constructs was also based on prior research. For example, Quispel and Maes (2014) had graphic design students rate visualizations on 1) attractiveness, 2) information retrieval, 3) clarity, and 4) an overall rating in addition to a selection task where participants selected three visualizations they most appreciated and then explained their selections. Quispel et al. (2016) surveyed design experts and "laymen" (non-design experts) on attractiveness, familiarity, and perceived ease of use. Locoro et al. (2017) include a higher number of measures in their survey of the perceptions and interaction with infographics. They measured sinteticity (informational quality), clarity, informativity, intuitivity, elegance, attractiveness, usability, and ease of use.
 
-In developing the survey questions, we considered the overlapping constructs of these examples from prior visualization work and how they were related to the above epistemologies in practice framework. In addition, we considered the need to create succinct survey questions in order to reduce survey fatigue and minimize unplanned missing data. 
+In developing the survey questions, we considered the overlapping constructs of these examples from prior visualization work and how they were related to the above epistemologies in practice (modeling) framework. For example, informativity was common in all of the studies, and was also a part of the modeling framework (for how and why something occurs). Clarity was a part of all of the studies, and was relfected in the modeling framework in the audience dimension. Finally, attractiveness was a part of all of the frameworks, and also pertained to the audience dimension of the modeling framework. In addition, we considered the need to create succinct survey questions in order to reduce survey fatigue and minimize unplanned missing data. 
 
 Thus, we developed he following three survey constructs, each of which is rated on a 5-point scale from very poor (1) to very good (5):
 
